overflow hot repair

--- a/src/styles/css/base.css
+++ b/src/styles/css/base.css
@@ -8,6 +8,7 @@ body {
     font-size: 16px;
     line-height: 1.6em;
     color: #2A2626;
+    overflow-x: hidden;
 }
 
 
